# lindorm-memobase

./: .env.example  .gitignore  Agents.md  CLAUDE.md  README.md  config.yaml.example  demo_advanced_search.py  demo_buffer_usage.py  demo_image_store.py  demo_memory_extraction.py  demo_merge_threshold.py  demo_project_config.py  demo_reset_storage.py  example.env  examples.py  pyproject.toml  quick_start.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
cookbooks/: .env.example  README.md  basic_usage.py  config.yaml  config.yaml.example  profile_management.py  quick_start.py
cookbooks/api_guide/: api_usage_demo.py  quick_start.py
cookbooks/chat_memory/: LAYERED_CACHE_OPTIMIZATION.md  README.md  memory_chatbot.py  requirements-web.txt  smart_memory_manager.py  start_web.sh  web_server.py
cookbooks/simple_chatbot/: simple_chatbot.py
docs/: API-Usage-Guide.md  README.md  api_reference.md  architecture.md  issues_and_improvements.md  memory-extraction-guide.md  quickstart.md
docs/demands/: image_support.md
lindormmemobase/: __init__.py  image_store.py  main.py
lindormmemobase/config/: __init__.py  config.py  project_logger.py
lindormmemobase/embedding/: __init__.py  jina_embedding.py  openai_embedding.py  utils.py
lindormmemobase/llm/: complete.py  lindormai_model_llm.py  openai_model_llm.py  utils.py
locomo-benchmark/: add_benchmark.py  requirements.txt
shenlan-poc/: .env.example  .gitignore  README.md  config.yaml.example  convert_stream_to_text.py  processing.py
(+85 files in other folders)
