[project]
name = "lindormmemobase"
version = "0.1.0"
description = "A lightweight memory extraction and profile management system for LLM applications"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "LindormMemobase Team"}
]
license = {text = "MIT"}
keywords = ["llm", "memory", "embedding", "profile", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "numpy>=2.3.2",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "tiktoken>=0.9.0",
    "typeguard>=4.4.4",
    "opensearch-py>=2.0.0",
    "mysql-connector-python==8.0.11",
    "pytest>=8.4.1",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
